--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Numbers Game</title>
+  <title>El Gazar Game</title>
+  <link rel="icon" href="elgazar.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Number Game</h1>
-<h2>Score: <span id="score">0</span></h2>
-
-<div class="game" id="game">
-    
+<div class="top-bar">
+  <div class="logo">
+    <span>EL</span>
+    <strong>GAZAR</strong>
+  </div>
 </div>
+
+<h1>Flip Game</h1>
+
+<div class="game" id="game"></div>
+
+<h2>Score: <span id="score">0</span></h2>
 
 <script src="script.js"></script>
 </body>
