--- a/index.html
+++ b/index.html
@@ -2,24 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>El Gazar Game</title>
-  <link rel="icon" href="elgazar.png">
+  <title>Numbers Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="top-bar">
-  <div class="logo">
-    <span>EL</span>
-    <strong>GAZAR</strong>
-  </div>
-</div>
-
-<h1>Flip Game</h1>
-
-<div class="game" id="game"></div>
-
+<h1>Number Game</h1>
+<a href="https://www.facebook.com/share/16sKj7Xabw/" class="facebook"><span id="me">الجزار</span></a>
 <h2>Score: <span id="score">0</span></h2>
+
+<div class="game" id="game">
+    
+</div>
 
 <script src="script.js"></script>
 </body>
